feat: add sync validator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </div>
     <section class="mt-4">
       <p class="text-sm text-gray-700">
-        Try <strong>john@adi.so</strong> and <strong>john@sreyaj.dev</strong>.
+        Try <strong>john@adi.so</strong> and <strong>john_d@sreyaj.dev</strong>.
       </p>
     </section>
   </form>
